//
// Copyright (C) 2024 EA group inc.
// Author: Jeff.li lijippy@163.com
// All rights reserved.
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published
// by the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.
//

syntax = "proto2";
import "sirius/proto/raft.proto";
import "sirius/proto/discovery.struct.proto";
import "sirius/proto/tso.struct.proto";

package sirius.proto;
option cc_generic_services = true;
//option cc_enable_arenas = true;

service DiscoveryService {
  rpc raft_control(RaftControlRequest) returns (RaftControlResponse);
  rpc discovery_manager(DiscoveryManagerRequest) returns (DiscoveryManagerResponse);
  rpc discovery_query(DiscoveryQueryRequest) returns (DiscoveryQueryResponse);
  rpc naming(ServletNamingRequest) returns (ServletNamingResponse);
  rpc tso_service(TsoRequest) returns (TsoResponse);
};

service DiscoveryRouterService {
  rpc raft_control(RaftControlRequest) returns (RaftControlResponse);
  rpc discovery_manager(DiscoveryManagerRequest) returns (DiscoveryManagerResponse);
  rpc discovery_query(DiscoveryQueryRequest) returns (DiscoveryQueryResponse);
  rpc tso_service(TsoRequest) returns (TsoResponse);

  rpc registry(ServletInfo) returns (DiscoveryRegisterResponse);
  rpc update(ServletInfo) returns (DiscoveryRegisterResponse);
  rpc cancel(ServletInfo) returns (DiscoveryRegisterResponse);
  rpc naming(ServletNamingRequest) returns (ServletNamingResponse);
};
